--- a/base apparel.html
+++ b/base apparel.html
@@ -8,21 +8,28 @@
             <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-    <h2> BASE APPAREL</h2>
-    <h1>WE'RE <strong>COMING SOON</strong></h1>
     <div>
-    <p>
+        <div>
+        <h1>WE'RE <strong>COMING SOON</strong></h1>
+        <div> 
+        <p>
         Hello fellow shopper! We're currently 
         building our new fashion store. 
         Add your email below to stay up to date 
         with announcements and our launch deals. 
-    </p>
-    </div>
-    <div>
+         </p>
+         </div> 
+         <div>
         <form>
             <input type="text" name="Email Address" placeholder="Email Address"/>
         </form>
+        </div>
+        </div>
     </div>
+<div class="container">
+    <img src="./images/hero-desktop.jpg" alt="Hero Desktop">
+</div>
+
 </body>
 </html>
 
