--- a/base apparel.html
+++ b/base apparel.html
@@ -7,26 +7,30 @@
             <title>Base Apparel </title>
             <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
+    <div class="logo">
+        <img src="./images/logo.svg" alt="Hero Logo">
+    </div>
     <div class="container">
-        <div>
+        <div class="annoucement">
         <h1>WE'RE <strong>COMING SOON</strong></h1>
         <div> 
         <p>
-        Hello fellow shopper! We're currently 
+        Hello fellow shoppers! We're currently 
         building our new fashion store. 
-        Add your email below to stay up to date 
+        Add your email below to stay up-to-date 
         with announcements and our launch deals. 
          </p>
          </div> 
-         <div>
-        <form>
+         <div >
+        <form class=submitForm id="round-edges" >
             <input type="text" name="Email Address" placeholder="Email Address"/>
         </form>
         </div>
         
     </div>
-<div >
+<div class="model" >
     <img src="./images/hero-desktop.jpg" alt="Hero Desktop">
 </div>
 </div>
