--- a/base apparel.html
+++ b/base apparel.html
@@ -13,8 +13,8 @@
         <img src="./images/logo.svg" alt="Hero Logo">
     </div>
     <div class="container">
-        <div class="annoucement">
-        <h1>WE'RE <strong>COMING SOON</strong></h1>
+        <div>
+        <h1><span>WE'RE</span> COMING SOON</h1>
         <div> 
         <p>
         Hello fellow shoppers! We're currently 
@@ -24,9 +24,9 @@
          </p>
          </div> 
          <div >
-        <form class=submitForm id="round-edges" >
-            <input type="text" name="Email Address" placeholder="Email Address"/>
-        </form>
+        <form class="submitForm round-edges" >
+            <input type=" email address text round-edges" name="Email Address" placeholder="Email Address"/>
+            <input type="button round edges" value="submit" />
         </div>
         
     </div>
