--- a/index.html
+++ b/index.html
@@ -5,35 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Base Apparel </title>
-            <link rel="stylesheet" href="./styles.css" />
+            <link rel="stylesheet" href="./styles.css" >
+            <link href="https://fonts.google.com/specimen/Josefin+Sans">
+           
 </head>
 
 <body>
-    <div class="container-left ">
+<div class=container >
+    <div id="container-right">
         <img src="./images/logo.svg" alt="Hero Logo">
-       
         <div>
-       <h1><span>WE'RE </span> COMING SOON</h1>
-        <div> 
-        <p>
+        <h1><span>WE'RE </span><br>COMING<br>SOON</h1>
+        </div> 
+        <div>
+            <p>
         Hello fellow shoppers! We're currently 
         building our new fashion store. 
         Add your email below to stay up-to-date 
         with announcements and our launch deals. 
-         </p>
+            </p>
          </div> 
-         <div >
+        <div >
         <form class="submitForm round-edges" >
-            <input type=" email address text round-edges" name="Email Address" placeholder="Email Address"/>
+            <input type=" email address round-edges" name="Email Address" placeholder="Email Address"/>
             <input type="button round edges" value="submit" />
         </div>
-        <div class="container-right" >
+    </div> 
+
+    <div id="container-left">
+        <div>
             <img src="./images/hero-desktop.jpg" alt="Hero Desktop">
         </div>
     </div>
-
 </div>
-
 </body>
 </html>
 
