font finally fixed

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Base Apparel </title>
             <link rel="stylesheet" href="./styles.css" >
-            <link href="https://fonts.google.com/specimen/Josefin+Sans">
-           
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+           <style>
+            body{
+                font-family: "Josefin Sans", sans-serif, serif;
+            }
+           </style>
 </head>
 
 <body>
 <div class=container >
+    
     <div id="container-right">
         <img src="./images/logo.svg" alt="Hero Logo">
         <div>
