--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="./styles.css" >
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
            <style>
-            body{
+            body {
                 font-family: "Josefin Sans", sans-serif, serif;
             }
            </style>
@@ -20,7 +20,7 @@
     <div id="container-right">
         <img src="./images/logo.svg" alt="Hero Logo">
         <div>
-        <h1><span>WE'RE </span><br>COMING<br>SOON</h1>
+            <h1><span>WE'RE </span><br>COMING<br>SOON</h1>
         </div> 
         <div>
             <p>
@@ -32,8 +32,8 @@
          </div> 
         <div >
         <form class="submitForm round-edges" >
-            <input type=" email address round-edges" name="Email Address" placeholder="Email Address"/>
-            <input type="button round edges" value="submit" />
+            <input type=" email round-edges" placeholder="Email Address"/>
+            <input type="button round edges" />
         </div>
     </div> 
 
