--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Base Apparel </title>
             <link rel="stylesheet" href="./styles.css" >
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
-           <style>
-            body {
-                font-family: "Josefin Sans", sans-serif, serif;
-            }
-           </style>
+            <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&family=Space+Mono&display=swap" rel="stylesheet">
+             <style>
+                body{
+                    font-family: 'Josefin Sans', sans-serif, serif;
+                }
+            </style>
 </head>
 
 <body>
@@ -32,8 +32,8 @@
          </div> 
         <div >
         <form class="submitForm round-edges" >
-            <input type=" email round-edges" placeholder="Email Address"/>
-            <input type="button round edges" />
+            <input type="email round-edges" placeholder="Email Address"/>
+            <input type="button round-edges" />
         </div>
     </div> 
 
