--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                     font-family: 'Josefin Sans', sans-serif, serif;
                 }
             </style>
+            <script src="./app.js"></script>
 </head>
 
 <body>
@@ -33,10 +34,11 @@
         <div >
         <form>
             <input class="round-edges" type="email" id ="email" name= "email" placeholder = "Email Address" required >
-            <button type="submit"><img src="./images/icon-arrow.svg"></button> 
+            <button  type="submit"  ><img src="./images/icon-arrow.svg"></button> 
         </form>
-        </div>
             <p class="error-message">Please provide a valid email</p>
+        </div>
+            
     </div> 
 
     <div class="container-left">
