--- a/index.html
+++ b/index.html
@@ -33,10 +33,21 @@
          </div> 
         <div >
         <form>
-            <input class="round-edges" type="email" id ="email" name= "email" placeholder = "Email Address" required >
-            <button  type="submit"  ><img src="./images/icon-arrow.svg"></button> 
+            <input 
+             class="round-edges"
+             id ="email" 
+             type="email" 
+             name= "email" 
+             placeholder = "Email Address" required 
+             />
+             <button 
+             type="submit" 
+             class="button"
+             onclick="validEmail()">
+                <img src="./images/icon-arrow.svg">
+            </button> 
         </form>
-            <p class="error-message">Please provide a valid email</p>
+             <!-- <p id="error-message">Please provide a valid email</p>  -->
         </div>
             
     </div> 
