js console log work, inner html no

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
              id="email" 
              type="text" 
              name="email" 
-             placeholder="Email Address" required 
+             placeholder="Email Address" required
+             autocapitalize="off" 
              />
              <input
              class="button"
-             type="button"
-             value="submit" 
+             type="button" 
              onclick="onSubmit()"
              />
-                <img src="./images/icon-arrow.svg">
+            <img src="./images/icon-arrow.svg">
             </input> 
-        </form>
-           
+        </form>  
+        <p id="error-message"></p>         
         </div>
             
     </div> 
