button size and shadow fixed again

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
              type="button" 
              onclick="onSubmit()"
              />
-            <img src="./images/icon-arrow.svg">
+            <img class=submit-arrow src="./images/icon-arrow.svg">
             </input> 
         </form>  
         <p id="error-message"></p>         
