--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Base Apparel </title>
-            <link rel="stylesheet" href="./styles.css" >
+            <link rel="stylesheet" href="./styles.scss" >
             <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&family=Space+Mono&display=swap" rel="stylesheet">
              <style>
                 body{
